[package]
name = "TNHL"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
event-stream = "0.1.1"
fmt = "0.1.0"
futures = "0.3.32"
log = "0.4.29"
ratatui = "0.30.0"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simplelog = "0.12.2"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.18"
tui-big-text = "0.8.2"
