[package]
name = "TNHL"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
event-stream = "0.1.1"
fmt = "0.1.0"
futures = "0.3.32"
log = "0.4.29"
ratatui = "0.30.0"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.18.0"
simplelog = "0.12.2"
strum = "0.28.0"
strum_macros = "0.28.0"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.18"
toml = "1.1.0"
tui-big-text = "0.8.2"
tui-logger = "0.18.1"
